Fix view on mobile by setting Viewport meta tag in Index.html and add dev database to appsettings.Development.json

--- a/Client/Shared/NavMenu.razor.css
+++ b/Client/Shared/NavMenu.razor.css
@@ -1,3 +1,12 @@
 .nav-bar-purple {
 		background-color: #6f42c1;
 }
+@media (max-width: 767px) {
+	.navbar {
+		min-height: 60px;
+	}
+
+	.navbar-brand {
+		font-size: 69px;
+	}
+}
